Fix album cover alignment when zoomed.
- If zooming text only (not the default in modern browsers), then it ends up pushed down because the text height is higher than the container.

--- a/Paramuse/wwwroot/home.css
+++ b/Paramuse/wwwroot/home.css
@@ -140,13 +140,15 @@ body {
         line-height: 1em;
         text-align: center;
         text-decoration: none;
+        display: grid;
+        align-items: center;
+        justify-items: center;
     }
 
         #player > .album-cover img {
             object-fit: contain;
-            max-height: 100%;
-            max-width: 100%;
-            vertical-align: middle;
+            height: 100%;
+            width: 100%;
         }
 
     #player > :is(.track-album, .track-artist, .track-title) {
